--- a/res/values/custom_config.xml
+++ b/res/values/custom_config.xml
@@ -18,6 +18,14 @@
     <!-- Disable speaker proximity preference for problematic devices -->
     <bool name="config_enabled_speakerprox" translatable="false">true</bool>
 
+    <!-- Config to show/hide Wifi Preference UI option -->
+   <bool name="config_wifi_calling_preference_supported" translatable="false">true</bool>
+   <!-- Default value for wifi preference option as defined in
+       com.android.ims.ImsConfig#WifiCallingPreference.
+       By default CELLULAR_ONLY, this can be customized
+       depends on operator requirements -->
+   <integer name="config_default_wifi_calling_preference">4</integer>
+
 </resources>
 
 
